--- a/public/main.css
+++ b/public/main.css
@@ -2,45 +2,54 @@ html {
   font-size: 20px; }
 
 .Index {
-  font-family: helvetica, sans-serif;
-  /*display: flex;*/
-  /*flex-wrap: wrap;*/
-  /*justify-content: center;*/ }
+  font-family: helvetica, sans-serif; }
   .Index a {
     cursor: pointer; }
   .Index p {
     font-weight: lighter; }
+  .Index-headerBox {
+    /*display: flex;*/
+    /*justify-content: space-around;*/
+    /*margin: 0 auto;*/
+    /*text-align: center;*/ }
+    .Index-headerBox .TitleBox {
+      display: inline-block;
+      text-align: center;
+      font-family: proxima-nova, sans-serif;
+      text-transform: uppercase;
+      letter-spacing: 0.4rem;
+      width: 70%; }
+      .Index-headerBox .TitleBox h1 {
+        margin: 0; }
+  .Index-siteImage {
+    display: inline; }
   .Index iframe {
     max-width: 100%;
-    max-height: 100%;
-    /*height: 125px;*/
-    /*height: 10%;*/ }
+    max-height: 100%; }
   .Index-header {
-    white-space: nowrap;
-    overflow: hidden;
-    text-align: center;
-    font-family: proxima-nova, sans-serif;
-    font-size: 2.2rem;
-    text-transform: uppercase;
-    letter-spacing: 8px; }
+    text-align: center; }
+  .Index-subheader {
+    text-align: center; }
   @media only screen and (max-width: 320px) {
     .Index-siteImage {
+      display: inline;
       width: auto;
-      height: 31.125px; }
+      height: 45px; }
     .Index-header {
-      font-size: 30px;
-      letter-spacing: 6px; }
+      display: inline;
+      font-size: 1rem;
+      letter-spacing: 0.3rem; }
     .Index-info p {
-      font-size: 5vw; } }
+      font-size: 0.85rem; } }
   @media only screen and (min-width: 321px) and (max-width: 767px) {
     .Index-siteImage {
       width: auto;
       height: 62.5px; }
     .Index-header {
-      font-size: 0.25vw;
-      letter-spacing: 7px; }
+      font-size: 1.75rem;
+      letter-spacing: 0.35rem; }
     .Index-info {
-      font-size: 22px; }
+      font-size: 0.85rem; }
     .Index-voiceDemo {
       width: 100%; } }
   .Index-info {
@@ -48,20 +57,24 @@ html {
     .Index-info p {
       width: 100%; }
   @media only screen and (min-width: 768px) {
-    .Index-headerBox {
-      margin: 0 auto;
-      text-align: center; }
     .Index-header {
-      font-size: 3.3rem;
-      letter-spacing: 7px; }
+      display: inline-block;
+      font-size: 1.4rem;
+      letter-spacing: 0.35rem; }
+    .Index-subheader {
+      font-size: 1.4rem;
+      letter-spacing: 0.35rem; }
     .Index-info {
       font-size: 1.1rem; }
     .Index-voiceDemo {
       /*width: 95%;*/
       padding: 0 15px; }
     .Index-siteImage {
+      display: inline-block;
+      max-width: 230px;
+      max-height: 95px;
       width: auto;
-      height: 125px; } }
+      height: auto; } }
   .Index-info {
     margin: 0px 15px; }
     .Index-info p {
