--- a/public/main.scss
+++ b/public/main.scss
@@ -12,43 +12,58 @@ html {
     font-weight: lighter;
   }
 
+  &-headerBox {
+    /*display: flex;*/
+    /*justify-content: space-around;*/
+    /*margin: 0 auto;*/
+    /*text-align: center;*/
+    .TitleBox {
+      display: inline-block;
+      text-align: center;
+      font-family: proxima-nova, sans-serif;
+      text-transform: uppercase;
+      letter-spacing: 0.4rem;
+      width: 70%;
+      h1 {
+        margin: 0;
+      }
+    }
+  }
+
+  &-siteImage {
+    display: inline;
+  }
+
   iframe {
     max-width: 100%;
     max-height: 100%;
-    /*height: 125px;*/
-    /*height: 10%;*/
   }
 
-  /*display: flex;*/
-  /*flex-wrap: wrap;*/
-  /*justify-content: center;*/
-
   &-header {
-    white-space: nowrap;
-    overflow: hidden;
     text-align: center;
-    font-family: proxima-nova, sans-serif;
-    font-size: 2.2rem;
-    text-transform: uppercase;
-    letter-spacing: 8px;
+  }
+
+  &-subheader {
+    text-align: center;
   }
 
 
   @media only screen and (max-width : 320px) {
     &-siteImage {
+      display: inline;
       width: auto;
-      height: 31.125px;
+      height: 45px;
     }
 
-
     &-header {
-      font-size: 30px;
-      letter-spacing: 6px;
+      display: inline;
+      font-size: 1rem;
+      letter-spacing: 0.3rem;
     }
 
     &-info {
       p {
-        font-size: 5vw;
+        font-size: 0.85rem;
       }
     }
   }
@@ -60,12 +75,12 @@ html {
     }
 
     &-header {
-      font-size: 0.25vw;
-      letter-spacing: 7px;
+      font-size: 1.75rem;
+      letter-spacing: 0.35rem;
     }
 
     &-info {
-      font-size: 22px;
+      font-size: 0.85rem;
     }
 
     &-voiceDemo {
@@ -81,14 +96,15 @@ html {
   }
 
   @media only screen and (min-width : 768px) {
-    &-headerBox {
-      margin: 0 auto;
-      text-align: center;
-    }
-    
     &-header {
-      font-size: 3.3rem;
-      letter-spacing: 7px;
+      display: inline-block;
+      font-size: 1.4rem;
+      letter-spacing: 0.35rem;
+    }
+
+    &-subheader {
+      font-size: 1.4rem;
+      letter-spacing: 0.35rem;
     }
 
     &-info {
@@ -101,8 +117,11 @@ html {
     }
 
     &-siteImage {
+      display: inline-block;
+      max-width:230px;
+      max-height:95px;
       width: auto;
-      height: 125px;
+      height: auto;
     }
   }
 
