--- a/public/main.scss
+++ b/public/main.scss
@@ -16,22 +16,34 @@ html {
     /*display: flex;*/
     /*justify-content: space-around;*/
     /*margin: 0 auto;*/
-    /*text-align: center;*/
+    font-weight: bolder;
+    text-align: center;
+    width: 100%;
     .TitleBox {
       display: inline-block;
       text-align: center;
       font-family: proxima-nova, sans-serif;
       text-transform: uppercase;
       letter-spacing: 0.4rem;
-      width: 70%;
       h1 {
         margin: 0;
+      }
+
+      &-header {
+        text-align: center;
+        line-height: 1;
+      }
+
+      &-subheader {
+        text-align: center;
+        line-height: 1;
       }
     }
   }
 
   &-siteImage {
     display: inline;
+    margin-right: 25px;
   }
 
   iframe {
@@ -39,16 +51,8 @@ html {
     max-height: 100%;
   }
 
-  &-header {
-    text-align: center;
-  }
 
-  &-subheader {
-    text-align: center;
-  }
-
-
-  @media only screen and (max-width : 320px) {
+  @media only screen and (max-width : 440px) {
     &-siteImage {
       display: inline;
       width: auto;
@@ -57,8 +61,13 @@ html {
 
     &-header {
       display: inline;
-      font-size: 1rem;
+      font-size: 0.75rem;
       letter-spacing: 0.3rem;
+    }
+
+    &-subheader {
+      font-size: 0.75rem;
+      letter-spacing: 0.35rem;
     }
 
     &-info {
@@ -68,14 +77,20 @@ html {
     }
   }
 
-  @media only screen and (min-width : 321px) and (max-width: 767px) {
+  @media only screen and (min-width : 441px) and (max-width: 560px) {
     &-siteImage {
       width: auto;
       height: 62.5px;
     }
 
     &-header {
-      font-size: 1.75rem;
+      display: inline-block;
+      font-size: 1rem;
+      letter-spacing: 0.35rem;
+    }
+
+    &-subheader {
+      font-size: 1rem;
       letter-spacing: 0.35rem;
     }
 
@@ -95,15 +110,16 @@ html {
     }
   }
 
-  @media only screen and (min-width : 768px) {
+  @media only screen and (min-width : 561px) {
     &-header {
       display: inline-block;
-      font-size: 1.4rem;
+      font-size: 2rem;
       letter-spacing: 0.35rem;
     }
 
     &-subheader {
-      font-size: 1.4rem;
+      font-size: 2rem;
+      line-height: 1;
       letter-spacing: 0.35rem;
     }
 
