[features] matching image height with text height

--- a/public/main.css
+++ b/public/main.css
@@ -8,32 +8,26 @@ html {
   .Index p {
     font-weight: lighter; }
   .Index-headerBox {
-    /*display: flex;*/
-    /*justify-content: space-around;*/
-    /*margin: 0 auto;*/
     font-weight: bolder;
     text-align: center;
     width: 100%; }
     .Index-headerBox .TitleBox {
       display: inline-block;
       text-align: center;
-      font-family: proxima-nova, sans-serif;
       text-transform: uppercase;
       letter-spacing: 0.4rem; }
-      .Index-headerBox .TitleBox h1 {
+      .Index-headerBox .TitleBox h2 {
         margin: 0; }
-      .Index-headerBox .TitleBox-header {
-        text-align: center;
-        line-height: 1; }
-      .Index-headerBox .TitleBox-subheader {
-        text-align: center;
-        line-height: 1; }
   .Index-siteImage {
     display: inline;
     margin-right: 25px; }
   .Index iframe {
     max-width: 100%;
     max-height: 100%; }
+  .Index-header {
+    text-align: center; }
+  .Index-subheader {
+    text-align: center; }
   @media only screen and (max-width: 440px) {
     .Index-siteImage {
       display: inline;
@@ -48,16 +42,16 @@ html {
       letter-spacing: 0.35rem; }
     .Index-info p {
       font-size: 0.85rem; } }
-  @media only screen and (min-width: 441px) and (max-width: 560px) {
+  @media only screen and (min-width: 441px) and (max-width: 689px) {
     .Index-siteImage {
       width: auto;
-      height: 62.5px; }
+      height: 3.57em; }
     .Index-header {
       display: inline-block;
-      font-size: 1rem;
+      font-size: 1.5rem;
       letter-spacing: 0.35rem; }
     .Index-subheader {
-      font-size: 1rem;
+      font-size: 1.5rem;
       letter-spacing: 0.35rem; }
     .Index-info {
       font-size: 0.85rem; }
@@ -67,10 +61,11 @@ html {
     margin: 0px 15px; }
     .Index-info p {
       width: 100%; }
-  @media only screen and (min-width: 561px) {
+  @media only screen and (min-width: 690px) {
     .Index-header {
       display: inline-block;
       font-size: 2rem;
+      line-height: 1;
       letter-spacing: 0.35rem; }
     .Index-subheader {
       font-size: 2rem;
