--- a/public/main.scss
+++ b/public/main.scss
@@ -13,30 +13,17 @@ html {
   }
 
   &-headerBox {
-    /*display: flex;*/
-    /*justify-content: space-around;*/
-    /*margin: 0 auto;*/
     font-weight: bolder;
     text-align: center;
     width: 100%;
     .TitleBox {
       display: inline-block;
       text-align: center;
-      font-family: proxima-nova, sans-serif;
       text-transform: uppercase;
       letter-spacing: 0.4rem;
-      h1 {
+
+      h2 {
         margin: 0;
-      }
-
-      &-header {
-        text-align: center;
-        line-height: 1;
-      }
-
-      &-subheader {
-        text-align: center;
-        line-height: 1;
       }
     }
   }
@@ -49,6 +36,14 @@ html {
   iframe {
     max-width: 100%;
     max-height: 100%;
+  }
+
+  &-header {
+    text-align: center;
+  }
+
+  &-subheader {
+    text-align: center;
   }
 
 
@@ -77,20 +72,20 @@ html {
     }
   }
 
-  @media only screen and (min-width : 441px) and (max-width: 560px) {
+  @media only screen and (min-width : 441px) and (max-width: 689px) {
     &-siteImage {
       width: auto;
-      height: 62.5px;
+      height: 3.57em;
     }
 
     &-header {
       display: inline-block;
-      font-size: 1rem;
+      font-size: 1.5rem;
       letter-spacing: 0.35rem;
     }
 
     &-subheader {
-      font-size: 1rem;
+      font-size: 1.5rem;
       letter-spacing: 0.35rem;
     }
 
@@ -110,10 +105,11 @@ html {
     }
   }
 
-  @media only screen and (min-width : 561px) {
+  @media only screen and (min-width : 690px) {
     &-header {
       display: inline-block;
       font-size: 2rem;
+      line-height: 1;
       letter-spacing: 0.35rem;
     }
 
