--- a/public/main.scss
+++ b/public/main.scss
@@ -21,6 +21,9 @@ html {
       text-align: center;
       text-transform: uppercase;
       letter-spacing: 0.4rem;
+      h1 {
+        margin: 0.75rem;
+      }
 
       h2 {
         margin: 0;
@@ -75,7 +78,7 @@ html {
   @media only screen and (min-width : 441px) and (max-width: 689px) {
     &-siteImage {
       width: auto;
-      height: 3.57em;
+      height: 3.75rem;
     }
 
     &-header {
