--- a/public/main.scss
+++ b/public/main.scss
@@ -22,7 +22,7 @@ html {
       text-transform: uppercase;
       letter-spacing: 0.4rem;
       h1 {
-        margin: 0.75rem;
+        margin: 0.75rem 0;
       }
 
       h2 {
@@ -33,6 +33,8 @@ html {
 
   &-siteImage {
     display: inline;
+    width: auto;
+    vertical-align: bottom;
     margin-right: 25px;
   }
 
@@ -43,9 +45,11 @@ html {
 
   &-header {
     text-align: center;
+    line-height: 1;
   }
 
   &-subheader {
+    line-height: 1;
     text-align: center;
   }
 
@@ -53,7 +57,6 @@ html {
   @media only screen and (max-width : 440px) {
     &-siteImage {
       display: inline;
-      width: auto;
       height: 45px;
     }
 
@@ -77,7 +80,8 @@ html {
 
   @media only screen and (min-width : 441px) and (max-width: 689px) {
     &-siteImage {
-      width: auto;
+      position: relative;
+      top: -1px;
       height: 3.75rem;
     }
 
@@ -112,13 +116,11 @@ html {
     &-header {
       display: inline-block;
       font-size: 2rem;
-      line-height: 1;
       letter-spacing: 0.35rem;
     }
 
     &-subheader {
       font-size: 2rem;
-      line-height: 1;
       letter-spacing: 0.35rem;
     }
 
@@ -127,16 +129,12 @@ html {
     }
 
     &-voiceDemo {
-      /*width: 95%;*/
       padding: 0 15px;
     }
 
     &-siteImage {
       display: inline-block;
-      max-width:230px;
-      max-height:95px;
-      width: auto;
-      height: auto;
+      height: 4.75rem;
     }
   }
 
