--- a/public/main.scss
+++ b/public/main.scss
@@ -1,5 +1,18 @@
+$fontSize: 20;
+$spacingMultiplier: 0.175;
+$breakpointMultiplier: 0.75;
+
+$large: 2rem;
+$largeSpacing: $large * $spacingMultiplier;
+$medium: $large * $breakpointMultiplier;
+$mediumSpacing: $large * $spacingMultiplier;
+$small: $medium * $breakpointMultiplier;
+$smallSpacing: $medium * $spacingMultiplier;
+$handheld: $small * $breakpointMultiplier;
+$handheldSpacing: $small * $spacingMultiplier;
+
 html {
-  font-size: 20px;
+  font-size: $fontSize;
 }
 
 .Index {
@@ -55,21 +68,32 @@ html {
   }
 
 
-  @media only screen and (max-width : 555px) {
+  @media only screen and (max-width : 415px) {
     &-siteImage {
-      display: inline;
+      display: none;
       height: 45px;
     }
 
-/*    &-header {
+    &-header {
       display: inline;
-      font-size: 0.75rem;
-      letter-spacing: 0.15rem;
+      font-size: $small;
+      letter-spacing: $smallSpacing;
     }
 
     &-subheader {
-      font-size: 0.75rem;
-      letter-spacing: 0.15rem;
+      font-size: $small;
+      letter-spacing: $smallSpacing;
+    }
+
+    /*&-header {
+      display: inline;
+      font-size: $handheld;
+      letter-spacing: $handheldSpacing;
+    }
+
+    &-subheader {
+      font-size: $handheld;
+      letter-spacing: $handheldSpacing;
     }
 
     &-info {
@@ -79,7 +103,31 @@ html {
     }*/
   }
 
-  @media only screen and (min-width : 556px) and (max-width: 689px) {
+  @media only screen and (min-width: 416px) and (max-width : 555px) {
+    &-siteImage {
+      display: inline;
+      height: 45px;
+    }
+
+    &-header {
+      display: inline;
+      font-size: $small;
+      letter-spacing: $smallSpacing;
+    }
+
+    &-subheader {
+      font-size: $small;
+      letter-spacing: $smallSpacing;
+    }
+
+    &-info {
+      p {
+        font-size: 0.85rem;
+      }
+    }
+  }
+
+  @media only screen and (min-width : 556px) and (max-width: 809px) {
     &-siteImage {
       position: relative;
       top: -1px;
@@ -88,16 +136,20 @@ html {
 
     &-header {
       display: inline-block;
-      font-size: 1.5rem;
-      letter-spacing: 0.30rem;
+      /*font-size: 1.25rem;*/
+      font-size: $medium;
+      /*letter-spacing: $mediumSpacing;*/
+      letter-spacing: $mediumSpacing;
       h1 {
         margin: 0.5625rem 0;
       }
     }
 
     &-subheader {
-      font-size: 1.5rem;
-      letter-spacing: 0.30rem;
+      /*font-size: 1.25rem;*/
+      font-size: $medium;
+      /*letter-spacing: 0.30rem;*/
+      letter-spacing: $mediumSpacing;
     }
 
     &-info {
@@ -116,7 +168,7 @@ html {
     }
   }
 
-  @media only screen and (min-width : 690px) {
+  @media only screen and (min-width : 810px) {
     &-siteImage {
       top: -1.5px;
       height: 4.75rem;
@@ -124,13 +176,13 @@ html {
 
     &-header {
       display: inline-block;
-      font-size: 2rem;
-      letter-spacing: 0.35rem;
+      font-size: $large;
+      letter-spacing: $largeSpacing;
     }
 
     &-subheader {
-      font-size: 2rem;
-      letter-spacing: 0.35rem;
+      font-size: $large;
+      letter-spacing: $largeSpacing;
     }
 
     &-info {
